--- a/deploy/files/gunicorn_start.j2
+++ b/deploy/files/gunicorn_start.j2
@@ -9,13 +9,13 @@ NUM_WORKERS=5
 echo "Starting $NAME as `whoami`"
 
 source {{venv_dir}}/bin/activate
-export PYTHONPATH={{app_dir}}:$PYTHONPATH
 
 # Create the run directory if it doesn't exist
 RUNDIR=$(dirname $SOCKFILE)
 test -d $RUNDIR || mkdir -p $RUNDIR
 
 exec {{venv_dir}}/bin/gunicorn server:app \
+  --chdir={{app_dir}} \
   --name=$NAME \
   --workers=$NUM_WORKERS \
   --user=$USER --group=$GROUP \
