--- a/deploy/files/supervisor.conf.j2
+++ b/deploy/files/supervisor.conf.j2
@@ -3,3 +3,5 @@ command = {{venv_dir}}/bin/gunicorn_start
 user = {{app_user}}
 stdout_logfile = {{log_dir}}/gunicorn.log
 redirect_stderr = true
+logfile_maxbytes = 1048576
+logfile_backups = 10
