--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>Blocks on blocks on blocks</title>
+  <title>Coin Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="description" content="Bitcoin startup name generator">
   <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script async src="//platform.twitter.com/widgets.js"></script>
@@ -138,6 +140,14 @@
     get();
     $('.icon').click(get);
   });
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-55674623-1', 'auto');
+  ga('send', 'pageview');
 </script>
 </body>
 </html>
