add more words, fix css

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
       background: linear-gradient(-10deg, #43cea2 0%, #185a9d 100%);
       text-align: center;
     }
+    body {
+      margin: 0;
+    }
     h2 {
       margin-top: 50px;
     }
